<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.ComplainFragment">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="@drawable/apps_bg"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ac_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_border"
                    android:gravity="center"
                    android:hint="Name"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size2" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ac_et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_border"
                    android:gravity="center"
                    android:hint="Mobile Number"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size2" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ac_et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_border"
                    android:gravity="center"
                    android:hint="Location"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size2" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_border"
                    android:padding="@dimen/_20sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ac_tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_border"
                    android:gravity="top|center"
                    android:hint="Details"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:overScrollMode="always"
                    android:padding="@dimen/_10sdp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textSize="@dimen/text_size2" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@color/ash_color"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_camera" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@color/ash_color"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:srcCompat="@drawable/ic_videocam_black_24dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_video" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@color/ash_color"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:srcCompat="@drawable/ic_volume_up_black_24dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_audio" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@color/ash_color"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            app:srcCompat="@drawable/ic_note_add_black_24dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_file" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ac_tv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/bg_round_blue"
                    android:gravity="center"
                    android:text="@string/txt_submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size2" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>